--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 spacy == 3.3.0
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz#egg=en_core_web_sm
 nltk == 3.4.5
+python-dotenv == 0.20.0
 markovify == 0.9.4
-twython == 3.8.0
+# twython == 3.8.0
+tweepy == 4.10.0
